include/dss_capi.h

    DSS_CAPI_DLL char* LoadShapes_Get_Name(void);
    DSS_CAPI_DLL void LoadShapes_Set_Name(char* Value);
    DSS_CAPI_DLL int32_t LoadShapes_Get_Count(void);
    DSS_CAPI_DLL int32_t LoadShapes_Get_First(void);
    DSS_CAPI_DLL int32_t LoadShapes_Get_Next(void);
    DSS_CAPI_DLL void LoadShapes_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL int32_t LoadShapes_Get_Npts(void);
    DSS_CAPI_DLL void LoadShapes_Get_Pmult(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LoadShapes_Get_Qmult(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LoadShapes_Set_Npts(int32_t Value);
    DSS_CAPI_DLL void LoadShapes_Set_Pmult(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LoadShapes_Set_Qmult(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LoadShapes_Normalize(void);
    DSS_CAPI_DLL void LoadShapes_Get_TimeArray(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LoadShapes_Set_TimeArray(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL double LoadShapes_Get_HrInterval(void);
    DSS_CAPI_DLL double LoadShapes_Get_MinInterval(void);
    DSS_CAPI_DLL double LoadShapes_Get_sInterval(void);
    DSS_CAPI_DLL void LoadShapes_Set_HrInterval(double Value);
    DSS_CAPI_DLL void LoadShapes_Set_MinInterval(double Value);
    DSS_CAPI_DLL void LoadShapes_Set_Sinterval(double Value);
    DSS_CAPI_DLL double LoadShapes_Get_PBase(void);
    DSS_CAPI_DLL double LoadShapes_Get_Qbase(void);
    DSS_CAPI_DLL void LoadShapes_Set_PBase(double Value);
    DSS_CAPI_DLL void LoadShapes_Set_Qbase(double Value);
    DSS_CAPI_DLL uint16_t LoadShapes_Get_UseActual(void);
    DSS_CAPI_DLL void LoadShapes_Set_UseActual(uint16_t Value);